[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Font/ubuntu_regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/MenuBG.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Escape Logo.png" type="Texture" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MenuBg" type="Sprite" parent="."]
position = Vector2( 276, 183.5 )
scale = Vector2( 1.77344, 1.65167 )
texture = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.333
anchor_right = 0.5
anchor_bottom = 0.333
margin_left = -131.0
margin_top = 160.2
margin_right = 78.0
margin_bottom = 326.2
rect_scale = Vector2( 1.25, 1.25 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 209.0
margin_bottom = 166.0
custom_constants/separation = 15

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 209.0
margin_bottom = 40.0
custom_colors/font_color_hover = Color( 0.721569, 0.721569, 0.721569, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 209.0
margin_bottom = 95.0
custom_colors/font_color_hover = Color( 0.721569, 0.721569, 0.721569, 1 )
custom_fonts/font = ExtResource( 2 )
text = "TBA"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 209.0
margin_bottom = 150.0
custom_colors/font_color_hover = Color( 0.721569, 0.721569, 0.721569, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="EscapeLogo" type="Sprite" parent="."]
position = Vector2( 512, 185 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
